--- a/README.html
+++ b/README.html
@@ -125,7 +125,7 @@ Any root solution is supported.
 The installation is always &quot;systemless&quot;, whether or not the system is rooted with Magisk.</p>
 <hr>
 <h2 id="license">LICENSE</h2>
-<p>Copyright 2017-2021, VR25</p>
+<p>Copyright 2017-2022, VR25</p>
 <p>This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
@@ -284,7 +284,7 @@ In interactive mode, it also asks the user whether they want to download and ins
 <h2 id="default-configuration">DEFAULT CONFIGURATION</h2>
 <pre><code><code><div>#DC#
 
-configVerCode=202111030
+configVerCode=202201010
 capacity=(-1 60 70 75 false false)
 temperature=(40 60 90 65)
 cooldownRatio=()
@@ -461,7 +461,6 @@ currentWorkaround=false
 # shutdown_capacity (sc) #
 # When the battery is discharging and its capacity/voltage_now_millivolts &lt;= sc and phone has been running for 15 minutes or more, acc daemon turns the phone off to reduce the discharge rate and protect the battery from potential damage induced by voltage below the operating range.
 # sc=-1 disables it.
-# [Beta] if the file /data/adb/vr25/acc-data/warn exists, accd posts Android shutdown warning notifications at sc + 5% or sc + 100 mV.
 
 # cooldown_capacity (cc) #
 # Capacity/voltage_now_millivolts at which the cooldown cycle starts.
@@ -770,6 +769,7 @@ Options
       acc -t /proc/mtk_battery_cmd/current_cmd 0::0 0::1 /proc/mtk_battery_cmd/en_power_path 1 0 (&quot;::&quot; is a placeholder for &quot; &quot; - MTK only)
 
   -t|--test [file]   Test charging switches from a file (default: /dev/.vr25/acc/ch-switches)
+    Control files that trigger reboots or kernel panics are automatically backlisted
     e.g.,
       acc -t (test known switches)
       acc -t /sdcard/experimental_switches.txt (test custom/foreign switches)
@@ -1016,7 +1016,19 @@ Persistent logs reside in <code>/data/adb/vr25/acc-data/logs/</code>.</p>
 The logs do not contain any personal information and are never automatically sent to the developer.
 Automatic exporting (local) happens under specific conditions (refer back to <code>SETUP/USAGE &gt; Terminal Commands &gt; Exit Codes</code>).</p>
 <h3 id="finding-additionalpotential-charging-switches-quickly">Finding Additional/Potential Charging Switches Quickly</h3>
-<p>Refer to (search for) the <code>--parse</code> option in the <a href="#terminal-commands">terminal commands</a> section.</p>
+<ol>
+<li>
+<p>Generate a list of potential charging switches: <code>acc -p &gt; /sdcard/acc-p.txt</code>.</p>
+</li>
+<li>
+<p>Remove from the list, all lines that you're SURE don't resemble a charging switch.</p>
+</li>
+<li>
+<p>Test all: <code>acc -t /sdcard/acc-p.txt</code>.</p>
+</li>
+</ol>
+<p>Note that some control files may trigger reboots or kernel panics.
+ACC automatically blacklists these, so that the user can continue testing (step 2) after each reboot.</p>
 <h3 id="install-upgrade-stop-and-restart-processes-seem-to-take-too-long">Install, Upgrade, Stop and Restart Processes Seem to Take Too Long</h3>
 <p>The daemon stop process implies complete reversal of changes made to the charging management system.
 Sometimes, <strong>this requires the charger to be plugged</strong>.
@@ -1161,6 +1173,7 @@ Refer back to <code>POWER SUPPLY LOGS (HELP NEEDED)</code>.</p>
 </blockquote>
 <p>With modern battery management systems, that's generally unnecessary.</p>
 <p>However, if your battery is underperforming, you may want to try the procedure described at <a href="https://batteryuniversity.com/article/bu-603-how-to-calibrate-a-smart-battery">https://batteryuniversity.com/article/bu-603-how-to-calibrate-a-smart-battery</a> .</p>
+<p>ACC automatically optimizes system performance and battery utilization, by forcing <code>bg-dexopt-job</code> on daemon [re]start, if charging.</p>
 <blockquote>
 <p>I set voltage to 4080 mV and that corresponds to just about 75% charge.
 But is it typically safer to let charging keep running, or to have the circuits turn on and shut off between defined percentage levels repeatedly?</p>
@@ -1243,12 +1256,6 @@ A common workaround is having <code>resume_capacity = pause_capacity - 1</code>.
 </ul>
 <hr>
 <h2 id="latest-changes">LATEST CHANGES</h2>
-<p><strong>v2021.11.3 (202111030)</strong></p>
-<ul>
-<li>Fixed installation issues</li>
-<li>Improved support for the current Magisk canary.</li>
-<li>Shutdown warning notifications (mV) are now posted at shutdown_capacity + 100mV (formerly 200).</li>
-</ul>
 <p><strong>v2021.12.14 (202112140)</strong></p>
 <ul>
 <li>Additional charging switches;</li>
@@ -1269,6 +1276,17 @@ A common workaround is having <code>resume_capacity = pause_capacity - 1</code>.
 <li>[ctrl-files]: added <code>battery/op_disable_charge 0 1</code> switch;</li>
 <li>[README]: updated troubleshooting section;</li>
 <li>General optimizations.</li>
+</ul>
+<p><strong>v2022.1.8 (202201080)</strong></p>
+<ul>
+<li><code>acc -p</code> finds even more potential switches;</li>
+<li>Enhanced charging status detection;</li>
+<li>General fixes &amp; optimizations;</li>
+<li>Improved idle mode support;</li>
+<li>New charging switches;</li>
+<li>Optimize system performance and battery utilization, by forcing <code>bg-dexopt-job</code> on daemon [re]start, if charging;</li>
+<li>Support for Qualcomm SnapDragon 8 Gen 1 devices, Nokia 2.2 and more;</li>
+<li>Updated documentation.</li>
 </ul>
 
     </body>
