Fix grammar mistake

--- a/README.html
+++ b/README.html
@@ -986,7 +986,7 @@ Here's how to do it:</p>
 <li>Test the reliability of the set switch. If it doesn't work properly, try another.</li>
 </ol>
 <p>Since not everyone is tech savvy, ACC daemon automatically applies settings for certain devices to minimize charging switch issues.
-These are are in <code>acc/oem-custom.sh</code>.</p>
+These are in <code>acc/oem-custom.sh</code>.</p>
 <h3 id="custom-max-charging-voltage-and-current-limits">Custom Max Charging Voltage And Current Limits</h3>
 <p>Unfortunately, not all kernels support these features.
 While custom current limits are supported by most (at least to some degree), voltage tweaking support is <em>exceptionally</em> rare.</p>
