Drop max_temp_pause, fix typo & add charging switch

--- a/README.html
+++ b/README.html
@@ -248,7 +248,7 @@ In interactive mode, it also asks the user whether they want to download and ins
 
 <h1>DC</h1>
 
-<p>configVerCode=202307260</p>
+<p>configVerCode=202308120</p>
 
 <p>ampFactor=
 battStatusWorkaround=true
@@ -632,7 +632,7 @@ voltFactor=</p>
 // A value of -1 disables it.</p>
 
 <p>// shutdown_temp (st) # Default: 55
-// Shutdown the system if battery temperature is at or below this value.</p>
+// Shutdown the system if battery temperature >= this value.</p>
 
 <p>// temp<em>level (tl) # Default: null
 // This is a current limiting hack.
