Fix -f and temp_level

--- a/README.html
+++ b/README.html
@@ -248,7 +248,7 @@ In interactive mode, it also asks the user whether they want to download and ins
 
 <h1>DC</h1>
 
-<p>configVerCode=202308120</p>
+<p>configVerCode=202308121</p>
 
 <p>ampFactor=
 battStatusWorkaround=true
@@ -265,7 +265,7 @@ prioritizeBattIdleMode=true
 rebootResume=false
 resetBattStats=(false false false)
 temperature=(35 50 45 55)
-tempLevel=
+tempLevel=0
 voltFactor=</p>
 
 <p>applyOnBoot=()</p>
@@ -634,12 +634,11 @@ voltFactor=</p>
 <p>// shutdown_temp (st) # Default: 55
 // Shutdown the system if battery temperature >= this value.</p>
 
-<p>// temp<em>level (tl) # Default: null
+<p>// temp_level (tl) # Default: 0
 // This is a current limiting hack.
 // Some devices have adjustable "temperature levels". At the highest level, charging current is blocked.
-// The stock values are generally integers, ranging from 0 to 6, 7 or slightly above.
-// For greater flexibility, this variable stores a percentage value -- which is internally converted to the system's scales.
-// On Samsung devices, battery/siop</em>level (0-100%, default 100) is used instead (if available).</p>
+// The stock values are generally integers, ranging from 0 to 6, 7 or so.
+// For greater flexibility, this variable stores a percentage value -- which is internally mapped to the system's scales.</p>
 
 <h1>/DC</h1>
 
